fix margin bug for tags on mobile view

--- a/assets/style/_scss/components/_workshops.scss
+++ b/assets/style/_scss/components/_workshops.scss
@@ -63,6 +63,7 @@
   font-weight: 700;
   line-height: 1;
   color: #fff;
+  margin-top: 5px;
 
   text-align: center;
   white-space: nowrap;
